--- a/FilezillaLog/FilezillaLog.csproj
+++ b/FilezillaLog/FilezillaLog.csproj
@@ -215,7 +215,7 @@
     <Content Include="Scripts\angular\angular.js" />
     <Content Include="Scripts\angular\angular.min.js" />
     <Content Include="Scripts\angular\version.txt" />
-    <Content Include="Scripts\app\controllers\HomeController.js" />
+    <Content Include="Scripts\app\controllers\LogController.js" />
     <Content Include="Scripts\app\filezillaLogApp.js" />
     <Content Include="Scripts\app\services\LogServices.js" />
     <Content Include="Scripts\app\templates\index.html" />
@@ -242,6 +242,8 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\ui-bootstrap-tpls-0.7.0.js" />
+    <Content Include="Scripts\ui-bootstrap-tpls-0.7.0.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
